Update meta and script

--- a/en/fitness.html
+++ b/en/fitness.html
@@ -5,13 +5,52 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Experience ultimate relaxation at Let's relax, Stockholm's best massage therapy and affordable deep tissue massage. Book your personalized session today for relaxation and a healthier lifestyle! Relaxation massage near me Stockholm">
+  
+  <title>Fitness & Massage Therapy in Stockholm | Let's Relax</title>
+  <meta name="description" content="Boost your fitness with personalized massage therapy at Let's Relax, Stockholm. Improve recovery, reduce pain, and enhance wellness with expert care." />
+  <meta name="keywords" content="fitness massage Stockholm, sports massage Stockholm, recovery massage, massage therapy, wellness, Let's Relax" />
+  <link rel="canonical" href="https://letsrelaxstockholm.netlify.app/en/fitness.html" />
+  <meta name="language" content="en" />
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Fitness & Massage Therapy in Stockholm | Let's Relax" />
+  <meta property="og:description" content="Boost your fitness with personalized massage therapy at Let's Relax, Stockholm. Improve recovery and wellness with expert care." />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/en/fitness.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_SE" />
+  
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "HealthAndBeautyBusiness",
+    "name": "Let's Relax",
+    "image": "https://letsrelaxstockholm.netlify.app/assets/images/class-yoga-massage.png",
+    "description": "Personalized fitness and massage therapy in Stockholm to improve recovery, reduce pain, and enhance wellness.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "telephone": "+46-70-072-8686",
+    "url": "https://letsrelaxstockholm.netlify.app/en/fitness.html",
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/fitness.html" />
   <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/fitness.html" />
   <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/fitness.html" />
-
-  <title>Relaxation & Wellness in Stockholm | Let's relax</title>
 
   <!-- 
     - favicon
