--- a/en/treatments.html
+++ b/en/treatments.html
@@ -5,13 +5,50 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Experience ultimate relaxation at Let's relax, Stockholm's best massage therapy and affordable deep tissue massage. Book your personalized session today for relaxation and a healthier lifestyle! Relaxation massage near me Stockholm">
+  
+   <title>Massage Treatments | Let's Relax Stockholm</title>
+
+  <meta name="description" content="Explore a variety of massage treatments including deep tissue, relaxation, and stress relief massages personalized for your wellness and recovery." />
+  
+  <meta property="og:title" content="Massage Treatments | Let's Relax Stockholm" />
+  <meta property="og:description" content="Explore a variety of massage treatments including deep tissue, relaxation, and wellness massage at Let's Relax in Stockholm." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/en/treatments.html" />
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Massage Treatments | Let's Relax Stockholm" />
+  <meta name="twitter:description" content="Explore a variety of massage treatments including deep tissue, relaxation, and wellness massage at Let's Relax in Stockholm." />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MassageBusiness",
+    "name": "Let's Relax",
+    "description": "Various massage treatments including deep tissue and relaxation massage in Stockholm.",
+    "url": "https://letsrelaxstockholm.netlify.app/en/treatments.html",
+    "telephone": "+46-70-072-8686",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/treatments.html" />
   <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/behandlingar.html" />
   <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/treatments.html" />
-
-  <title>Relaxation & Wellness in Stockholm | Let's relax</title>
 
   <!-- 
     - favicon
@@ -30,30 +67,6 @@
   -->
   <link rel="stylesheet" href="../assets/css/style.css">
 
-
-  <!-- 
-    - preload images
-  -->
-  <link rel="preload" as="image" href="../assets/images/hero-banner.webp">
-  <link rel="preload" as="image" href="../assets/images/hero-circle-one.png">
-  <link rel="preload" as="image" href="../assets/images/hero-circle-two.png">
-  <link rel="preload" as="image" href="../assets/images/heart-rate.svg">
-  <link rel="preload" as="image" href="../assets/images/calories.svg">
-  <link rel="preload" as="image" href="../assets/images/FirstTime.webp">
-  <link rel="preload" as="image" href="../assets/images/weight-lifting.webp">
-  <link rel="preload" as="image" href="../assets/images/fitness-banner.webp">
-  <link rel="preload" as="image" href="../assets/images/sports.webp">
-  <link rel="preload" as="image" href="../assets/images/reflexology-foot-massage.webp">
-  <link rel="preload" as="image" href="../assets/images/Office syndrome.webp">
-  <link rel="preload" as="image" href="../assets/images/Yoga-massage.webp">
-  <link rel="preload" as="image" href="../assets/images/stretch.webp">
-  <link rel="preload" as="image" href="../assets/images/back&foot-massage.webp">
-  <link rel="preload" as="image" href="../assets/images/hotoil.webp">
-  <link rel="preload" as="image" href="../assets/images/aromatherapy-massage.webp">
-  <link rel="preload" as="image" href="../assets/images/swipe-left.svg">
-  <link rel="preload" as="image" href="../assets/images/footer-clock.png">
-  <link rel="preload" as="image" href="../assets/blog/Self Care.webp">
-  <link rel="preload" as="image" href="../assets/images/wellness-banner.webp">
 </head>
 
 <body id="top">
