--- a/sv/index.html
+++ b/sv/index.html
@@ -5,8 +5,45 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Upplev total avkoppling på Let's Relax, Stockholms bästa massage och prisvärda djupgående massage. Boka din personliga session idag för avkoppling och en hälsosammare livsstil! Avslappningsmassage nära mig Stockholm">
-  <title>Avkoppling & Välbefinnande i Stockholm | Let's Relax</title>
+  
+  <title>Let's Relax | Bästa Massageterapi i Stockholm</title>
+  <meta name="description" content="Upplev ultimat avkoppling och prisvärd djupvävnadsmassage hos Let's Relax i Stockholm. Boka din personliga behandling idag nära Stockholms Central." />
+
+  <meta property="og:title" content="Let's Relax | Bästa Massageterapi i Stockholm" />
+  <meta property="og:description" content="Upplev ultimat avkoppling och prisvärd djupvävnadsmassage hos Let's Relax i Stockholm. Boka din personliga behandling idag nära Stockholms Central." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/sv/index.html" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Let's Relax | Bästa Massageterapi i Stockholm" />
+  <meta name="twitter:description" content="Upplev ultimat avkoppling och prisvärd djupvävnadsmassage hos Let's Relax i Stockholm. Boka din personliga behandling nära T-Centralen Vasagatan." />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MassageBusiness",
+    "name": "Let's Relax",
+    "description": "Certifierad massageterapi och wellness-tjänster i Stockholm.",
+    "url": "https://letsrelaxstockholm.netlify.app/sv/index.html",
+    "telephone": "+46 7007286868",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="shortcut icon" href="../favIcon-relax.webp" type="image/svg+xml">
 
@@ -52,7 +89,7 @@
             <a href="valbefinnande.html" class="navbar-link" data-nav-link>Välbefinnande</a>
           </li>
           <li>
-            <a href="contact.html" class="navbar-link" data-nav-link>Kontakt</a>
+            <a href="kontakt.html" class="navbar-link" data-nav-link>Kontakt</a>
           </li>
         </ul>
 
