--- a/sv/valbefinnande.html
+++ b/sv/valbefinnande.html
@@ -5,8 +5,49 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Upplev total avkoppling på Let's Relax, Stockholms bästa massageterapi och prisvärda djupgående massage. Boka din personliga session idag för avkoppling och en hälsosammare livsstil! Avslappningsmassage nära mig Stockholm">
-  <title>Avkoppling & Välbefinnande i Stockholm | Let's Relax</title>
+  
+  <title>Välbefinnande & Avslappningsmassage i Stockholm | Let's Relax</title>
+  
+  <meta name="description" content="Slappna av och återhämta dig med välbefinnandemassage på Let's Relax i Stockholm. Certifierade terapeuter erbjuder personlig vård för kropp och själ." />
+  <meta name="keywords" content="välbefinnande massage Stockholm, avslappningsmassage, spa Stockholm, massagebehandling, Let's Relax" />
+  <link rel="canonical" href="https://letsrelaxstockholm.netlify.app/sv/valbefinnande.html" />
+  <meta name="language" content="sv" />
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Välbefinnande & Avslappningsmassage i Stockholm | Let's Relax" />
+  <meta property="og:description" content="Slappna av och återhämta dig med välbefinnandemassage på Let's Relax i Stockholm. Certifierade terapeuter erbjuder personlig vård för kropp och själ." />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/sv/valbefinnande.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="sv_SE" />
+  
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "HealthAndBeautyBusiness",
+    "name": "Let's Relax",
+    "image": "https://letsrelaxstockholm.netlify.app/assets/images/class-yoga-massage.png",
+    "description": "Välbefinnande och avslappningsmassage i Stockholm med certifierade terapeuter som erbjuder personliga behandlingar.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "telephone": "+46-70-072-8686",
+    "url": "https://letsrelaxstockholm.netlify.app/sv/valbefinnande.html",
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="shortcut icon" href="../favicon.webp" type="image/svg+xml">
 
