--- a/en/about.html
+++ b/en/about.html
@@ -5,8 +5,46 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Experience ultimate relaxation at Let's relax, Stockholm's best massage therapy and affordable deep tissue massage. Book your personalized session today for relaxation and a healthier lifestyle! Relaxation massage near me Stockholm">
-  <title>Relaxation & Wellness in Stockholm | Let's relax</title>
+  
+  <title>About Us | Certified Massage Therapist in Stockholm | Let's Relax</title>
+  
+  <meta name="description" content="Meet our certified massage therapist in Stockholm offering expert therapeutic and wellness massage treatments tailored for your needs." />
+  
+  <meta property="og:title" content="About Us | Certified Massage Therapist in Stockholm | Let's Relax" />
+  <meta property="og:description" content="Meet our certified massage therapist in Stockholm offering expert therapeutic and wellness massage treatments tailored for your needs." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/en/about.html" />
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="About Us | Certified Massage Therapist in Stockholm | Let's Relax" />
+  <meta name="twitter:description" content="Meet our certified massage therapist in Stockholm offering expert therapeutic and wellness massage treatments tailored for your needs." />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MassageBusiness",
+    "name": "Let's Relax",
+    "description": "Certified massage therapy and wellness services in Stockholm.",
+    "url": "https://letsrelaxstockholm.netlify.app/en/about.html",
+    "telephone": "+46-70-072-8686",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/about.html" />
   <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/om-oss.html" />
