--- a/en/contact.html
+++ b/en/contact.html
@@ -5,14 +5,50 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="massage Stockholm, wellness, Thai massage, Let's Relax, Stockholm spa, deep tissue massage, massage near me, best massage, best massage in Stockholm, Sports massage, yoga massage, relax, massage near Stockholm central station, massage in city">
-  <meta name="description" content="Experience ultimate relaxation at Let's Relax, Stockholm's leading massage and wellness center. Book your personalized session today!">
+  
+  <title>Contact Us | Let's Relax Stockholm</title>
+  <meta name="description" content="Contact Let's Relax in Stockholm for appointment booking, questions, or massage therapy inquiries. Convenient location near Stockholm Central Station." />
+  
+  <meta property="og:title" content="Contact Us | Let's Relax Stockholm" />
+  <meta property="og:description" content="Contact Let's Relax in Stockholm for appointment booking, questions, or massage therapy inquiries. Convenient location near Stockholm Central Station." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/en/contact.html" />
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Contact Us | Book Your Massage in Norrmalm Stockholm City" />
+  <meta name="twitter:description" content="Contact Let's Relax in Stockholm for appointment booking or questions. Convenient location near Stockholm Central Station and Arlanda Express." />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MassageBusiness",
+    "name": "Let's Relax",
+    "description": "Contact for appointment booking and inquiries in Stockholm massage therapy.",
+    "url": "https://letsrelaxstockholm.netlify.app/en/contact.html",
+    "telephone": "+46-70-072-8686",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/contact.html" />
   <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/kontakt.html" />
   <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/contact.html" />
 
-  <title>Relaxation & Wellness in Stockholm | Let's relax</title>
 
   <!-- 
     - favicon
