--- a/sv/behandlingar.html
+++ b/sv/behandlingar.html
@@ -5,13 +5,49 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Upplev total avkoppling på Let's Relax, Stockholms bästa massageterapi och prisvärda djupgående massage. Boka din personliga session idag för avkoppling och en hälsosammare livsstil! Avslappningsmassage nära mig Stockholm">
+  
+  <title>Massagebehandlingar | Let's Relax Stockholm</title>
+  <meta name="description" content="Utforska våra massagebehandlingar, inklusive djupvävnadsmassage, avslappningsmassage och wellnessmassage hos Let's Relax i Stockholm." />
+  
+  <meta property="og:title" content="Massagebehandlingar | Let's Relax Stockholm" />
+  <meta property="og:description" content="Utforska våra massagebehandlingar, inklusive djupvävnadsmassage, avslappningsmassage och wellnessmassage hos Let's Relax i Stockholm." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/sv/treatments.html" />
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Massagebehandlingar | Let's Relax Stockholm" />
+  <meta name="twitter:description" content="Upptäck våra massagetjänster i norrmalm Stockholm, inklusive djupvävnads-, avslappnings- och stresslindrande massage, anpassade för ditt välbefinnande och återhämtning." />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MassageBusiness",
+    "name": "Let's Relax",
+    "description": "Olika massagebehandlingar inklusive djupvävnadsmassage och avslappningsmassage i Stockholm.",
+    "url": "https://letsrelaxstockholm.netlify.app/sv/behandingar",
+    "telephone": "+46 700728686",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/treatments.html" />
   <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/behandlingar.html" />
   <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/treatments.html" />
-  
-  <title>Avkoppling & Välbefinnande i Stockholm | Let's Relax</title>
 
   <link rel="shortcut icon" href="../favIcon-relax.webp" type="image/svg+xml">
 
