--- a/sv/fitness.html
+++ b/sv/fitness.html
@@ -5,13 +5,52 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Upplev total avkoppling på Let's Relax, Stockholms bästa massage och prisvärda djupgående massage. Boka din personliga session idag för avkoppling och en hälsosammare livsstil! Avslappningsmassage nära mig Stockholm">
+  
+  <title>Fitness & Massagebehandling i Stockholm | Let's Relax</title>
+  <meta name="description" content="Förbättra din fitness med personlig massagebehandling på Let's Relax i Stockholm. Bättre återhämtning och välmående med professionell vård." />
+  <meta name="keywords" content="fitness massage Stockholm, idrottsmassage Stockholm, återhämtningsmassage, massagebehandling, välmående, Let's Relax" />
+  <link rel="canonical" href="https://letsrelaxstockholm.netlify.app/sv/fysisk-traning.html" />
+  <meta name="language" content="sv" />
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Fitness & Massagebehandling i Stockholm | Let's Relax" />
+  <meta property="og:description" content="Förbättra din fitness med personlig massagebehandling på Let's Relax i Stockholm. Bättre återhämtning och välmående med professionell vård." />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/sv/fitness.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="sv_SE" />
+  
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "HealthAndBeautyBusiness",
+    "name": "Let's Relax",
+    "image": "https://letsrelaxstockholm.netlify.app/assets/images/class-yoga-massage.png",
+    "description": "Personlig fitness- och massagebehandling i Stockholm för bättre återhämtning, smärtlindring och välmående.",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "telephone": "+46-70-072-8686",
+    "url": "https://letsrelaxstockholm.netlify.app/sv/fitness.html",
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/fitness.html" />
   <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/fitness.html" />
   <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/fitness.html" />
-  
-  <title>Avkoppling & Välbefinnande i Stockholm | Let's Relax</title>
 
   <link rel="shortcut icon" href="../favicon.webp" type="image/svg+xml">
 
