--- a/sv/kontakt.html
+++ b/sv/kontakt.html
@@ -5,13 +5,50 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Upplev total avkoppling på Let's Relax, Stockholms ledande massage- och friskvårdscenter. Boka din personliga session idag!">
+
+  <title>Kontakt | Let's Relax Stockholm</title>
+
+  <meta name="description" content="Boka din massage hos Let's Relax i norrmalm Stockholm. Kontakta oss för massageterapibehandlingar nära T-Centralen vasagatan Arlanda Express." />
+  
+  <meta property="og:title" content="Kontakt | Let's Relax Stockholm" />
+  <meta property="og:description" content="Kontakta Let's Relax i Stockholm för bokning av behandlingar, frågor eller massageförfrågningar. Bekväm plats nära Stockholms Central." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/sv/kontakt" />
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Kontakt | Let's Relax Stockholm" />
+  <meta name="twitter:description" content="Kontakta Let's Relax i Stockholm för bokning av behandlingar, frågor eller massageförfrågningar. Bekväm plats nära Stockholms Central." />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MassageBusiness",
+    "name": "Let's Relax",
+    "description": "Kontakt för bokning och frågor om massageterapi i Stockholm.",
+    "url": "https://letsrelaxstockholm.netlify.app/sv/kontakt",
+    "telephone": "+46 700728686",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/contact.html" />
   <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/kontakt.html" />
   <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/contact.html" />
-  
-  <title>Avkoppling & Välbefinnande i Stockholm | Let's Relax</title>
 
   <link rel="shortcut icon" href="../favIcon-relax.webp" type="image/svg+xml">
 
