--- a/sv/om-oss.html
+++ b/sv/om-oss.html
@@ -5,13 +5,49 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Upplev total avkoppling på Let's Relax, Stockholms bästa massage och prisvärda djupgående massage. Boka din personliga session idag för avkoppling och en hälsosammare livsstil! Avslappningsmassage nära mig Stockholm">
+  
+  <title>Om Oss | Certifierad Massageterapeut i Stockholm | Let's Relax</title>
+  <meta name="description" content="Möt vår certifierade massageterapeut i Stockholm som erbjuder professionella terapeutiska och wellness-massagebehandlingar anpassade efter dina behov." />
+  
+  <meta property="og:title" content="Om Oss | Certifierad Massageterapeut i Stockholm | Let's Relax" />
+  <meta property="og:description" content="Möt vår certifierade massageterapeut i Stockholm som erbjuder professionella terapeutiska och wellness-massagebehandlingar anpassade efter dina behov." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://letsrelaxstockholm.netlify.app/sv/om-oss" />
+  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Om Oss | Certifierad Massageterapeut i Stockholm | Let's Relax" />
+  <meta name="twitter:description" content="Möt vår certifierade massageterapeut i Stockholm som erbjuder professionella terapeutiska och wellness-massagebehandlingar anpassade efter dina behov." />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MassageBusiness",
+    "name": "Let's Relax",
+    "description": "Certifierad massageterapi och wellness-tjänster i Stockholm.",
+    "url": "https://letsrelaxstockholm.netlify.app/sv/om-oss",
+    "telephone": "+46 700728686",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Wallingatan 37",
+      "addressLocality": "Stockholm",
+      "postalCode": "111 24",
+      "addressCountry": "SE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 59.336651,
+      "longitude": 18.060017
+    },
+    "sameAs": [
+      "https://www.facebook.com/letsrelaxstockholm",
+      "https://www.instagram.com/let_s_relax_stockholm"
+    ]
+  }
+  </script>
 
   <link rel="alternate" hreflang="en" href="https://letsrelaxstockholm.netlify.app/en/about.html" />
   <link rel="alternate" hreflang="sv" href="https://letsrelaxstockholm.netlify.app/sv/om-oss.html" />
   <link rel="alternate" hreflang="x-default" href="https://letsrelaxstockholm.netlify.app/en/about.html" />
-  
-  <title>Avkoppling & Välbefinnande i Stockholm | Let's Relax</title>
 
   <link rel="shortcut icon" href="../favIcon-relax.webp" type="image/svg+xml">
 
