--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Let's Relax | Best Massage Therapy in Stockholm</title>
-  <meta name="description" content="Experience ultimate relaxation and affordable deep tissue massage at Let's Relax in Stockholm. Book your personalized session today near Stockholm Central Station." />
+  <meta name="description" content="Looking for a massage near you in Stockholm? Let's Relax best massage, certified massage therapy conveniently located near Stockholm Central Station and Arlanda Express." />
 
   <meta property="og:title" content="Let's Relax | Best Massage Therapy in Stockholm" />
   <meta property="og:description" content="Experience ultimate relaxation and affordable deep tissue massage in Norrmalm Stockholm city. Book your personalized session near Central Station and Arlanda Express." />
@@ -130,7 +130,8 @@
               <strong class="strong">The Best</strong>Massage & Wellness Hub
             </p>
             <p class="section-text">
-              <strong class="strong hero-subtitle">Welcome to Let's Relax! </strong>  At Let's Relax Massage, we specialize in high-quality massage therapy that restores balance to your body and mind. Whether you are dealing with stress, muscle tension, or simply need a break — you have come to the right place.  
+              <strong class="strong hero-subtitle">Welcome to Let's Relax! </strong> 
+              At Let's Relax Massage, we specialize in high-quality massage therapy that restores balance to your body and mind. Whether you are dealing with stress, muscle tension, or simply need a break — you have come to the right place.  
             </p> 
             <p class="section-text">
               Best massage therapy in the city where your journey to a healthier, stress-free lifestyle begins. Our skilled therapists provide a personalized experience that leaves you feeling refreshed and renewed. 
