Add treatments button

--- a/en/about.html
+++ b/en/about.html
@@ -135,9 +135,11 @@
             </p>
             <br>
             <p class="section-text-about">We're proud to serve Stockholm's community, combining traditional massage techniques with modern wellness practices. Let us help you recharge, refocus, and rejuvenate.</p>
+            <div class="container">
+              <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
 
-            <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
-
+              <a target="_blank" href="treatments.html" class="btn btn-primary">Treatments</a>
+            </div>
           </div>
 
           <div class="hero-banner">
