--- a/en/contact.html
+++ b/en/contact.html
@@ -172,7 +172,20 @@
         </div> 
       </section> 
 
-       <section class="hero">  
+      
+
+       <section class="hero">    
+        <div class="hero-subtitle">
+          <p class="text-center">
+              Upon your arrival,<strong class="strong">please head right in the stairwell</strong>then take the elevator or stairs to<strong class="strong"> the 1st floor.</strong> 
+              <br>
+                📍 You'll find us <strong class="strong">inside 85 Kliniken</strong> Please come in and relax in our cozy waiting area.
+                <br>
+                Your therapist will be there shortly to escort you to our relaxing massage room.
+              
+          </p>
+        </div>
+        <br><br> 
         <div class="container">
           <img src="../assets/images/waitingroom.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border margin">
           <img src="../assets/images/waitingroom2.JPG" alt="85 Kliniken waiting area" width="380" height="380" loading="lazy" class="round-border margin">
