--- a/sv/kontakt.html
+++ b/sv/kontakt.html
@@ -159,6 +159,15 @@
       </section>
 
        <section class="hero">
+        <div class="hero-subtitle">
+          <p class="text-center">
+              Vid din ankomst, vänligen <strong class="strong">gå till höger i trapphuset</strong>, ta sedan hissen eller trapporna till <strong class="strong">våning 1.</strong>
+              <br>
+                📍 Du hittar oss <strong class="strong">inne på 85 Kliniken</strong> Välkommen in och koppla av i vår mysiga vänthörna.
+                <br>
+                Din terapeut kommer strax för att eskortera dig till vårt avkopplande massagerum.
+          </p>
+        </div>
         <div class="container">
           <img src="../assets/images/waitingroom.JPG" alt="85 Kliniken väntrum" width="380" height="380" loading="lazy" class="round-border margin">
           <img src="../assets/images/waitingroom2.JPG" alt="85 Kliniken väntrum" width="380" height="380" loading="lazy" class="round-border margin">
