modified about pages

--- a/en/contact.html
+++ b/en/contact.html
@@ -175,7 +175,7 @@
       
 
        <section class="hero">    
-        <div class="hero-subtitle">
+        <div class="hero-subtitle center-align">
           <p class="text-center">
               Upon your arrival,<strong class="strong">please head right in the stairwell</strong>then take the elevator or stairs to<strong class="strong"> the 1st floor.</strong> 
               <br>
@@ -200,7 +200,7 @@
 
 <!--- #FOOTER-->
 
-  <footer class="footer section">
+  <footer class="footer">
 
     <div class="section footer-top has-bg-image">
       <div class="container">
@@ -344,6 +344,7 @@
           <span class="nowrap"> Let's Relax Stockholm </span> | All Rights Reserved
         </p>
     </div>
+    <br>
   </footer>
 
   <!--- #BACK TO TOP-->
