--- a/sv/kontakt.html
+++ b/sv/kontakt.html
@@ -159,7 +159,7 @@
       </section>
 
        <section class="hero">
-        <div class="hero-subtitle">
+        <div class="hero-subtitle center-align">
           <p class="text-center">
               Vid din ankomst, vänligen <strong class="strong">gå till höger i trapphuset</strong>, ta sedan hissen eller trapporna till <strong class="strong">våning 1.</strong>
               <br>
@@ -168,6 +168,7 @@
                 Din terapeut kommer strax för att eskortera dig till vårt avkopplande massagerum.
           </p>
         </div>
+        <br><br>
         <div class="container">
           <img src="../assets/images/waitingroom.JPG" alt="85 Kliniken väntrum" width="380" height="380" loading="lazy" class="round-border margin">
           <img src="../assets/images/waitingroom2.JPG" alt="85 Kliniken väntrum" width="380" height="380" loading="lazy" class="round-border margin">
@@ -180,8 +181,7 @@
     </article>
   </main>
 
-<footer class="footer section">
-
+<footer class="footer">
     <div class="section footer-top has-bg-image">
       <div class="container">
 
@@ -324,6 +324,7 @@
           <span class="nowrap"> Let's Relax Stockholm </span> | Alla rättigheter förbehållna
         </p>
     </div>
+    <br>
   </footer>
 
   <a href="#top" class="back-top-btn" aria-label="tillbaka till toppen" data-back-top-btn>
