--- a/en/about.html
+++ b/en/about.html
@@ -131,10 +131,10 @@
             
             <br>
             <p class="section-text-about">
-              At Let's Relax Stockhom, we believe that wellness is more than a luxury—it's a lifestyle. Founded in Stockholm, our mission is to provide a sanctuary where you can escape the daily grind and embrace tranquility.
+              At Let's Relax Stockholm, we believe true wellness is a lifestyle, not just a luxury. Established in Stockholm since 2012, our tranquil sanctuary is your dedicated haven for escaping daily pressures and finding profound relaxation
             </p>
             <br>
-            <p class="section-text-about">We're proud to serve Stockholm's community, combining traditional massage techniques with modern wellness practices. Let us help you recharge, refocus, and rejuvenate.</p>
+            <p class="section-text-about">Our certified therapists expertly blend traditional massage techniques with modern wellness approaches to help you achieve stress relief, alleviate discomfort, and fully rejuvenate. Discover the ultimate therapeutic massage experience in Stockholm, meticulously tailored to restore your balance and vitality.</p>
             <div class="container">
               <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
 
@@ -158,7 +158,7 @@
 
   <!--- #FOOTER-->
 
-  <footer class="footer section">
+  <footer class="footer">
 
     <div class="section footer-top has-bg-image">
       <div class="container">
@@ -302,6 +302,7 @@
           <span class="nowrap"> Let's Relax Stockholm </span> | All Rights Reserved
         </p>
     </div>
+    <br>
   </footer>
 
   <!--- #BACK TO TOP-->
