--- a/en/wellness.html
+++ b/en/wellness.html
@@ -129,7 +129,7 @@
 <!--- #HERO-->
       <section class="section hero has-after has-bg-image" id="home" aria-label="hero" data-section
         >
-        <div class="container">
+        <div class="container section">
           <div class="hero-content">
             <h1 id="#top" class="h1 hero-title">Health and Wellness</h1>
             
