--- a/sv/fitness.html
+++ b/sv/fitness.html
@@ -115,7 +115,7 @@
   <main>
     <article>
       <section class="section hero has-after has-bg-image" id="home" aria-label="hjälte" data-section>
-        <div class="container">
+        <div class="container section">
           <div class="hero-content">
             <h1 class="h1 hero-title">Se bättre ut, må bättre</h1>
             <p class="hero-subtitle">
@@ -519,7 +519,7 @@
         </article>
   </main>
 
-<footer class="footer">
+  <footer class="footer">
 
     <div class="section footer-top">
       <div class="container">
