--- a/en/about.html
+++ b/en/about.html
@@ -124,7 +124,7 @@
       <!--- #HERO-->
       <section class="section hero has-after has-bg-image" id="home" aria-label="hero" data-section
         > 
-        <div class="container">
+        <div class="container section">
           <div class="hero-content">
             <h1 class="h1 hero-title">About Us</h1>
             <h3 class="hero-subtitle">Your Partner in Wellness and Relaxation</h3>
