--- a/en/contact.html
+++ b/en/contact.html
@@ -127,7 +127,7 @@
     <article>
       <!--- #HERO-->
       <section class="section hero has-after has-bg-image" id="home" aria-label="hero" data-section>
-        <div class="container">
+        <div class="container section">
           <div class="hero-content">
             <h1 class=" h1 hero-title">Get in Touch</h1>
             <p 
