--- a/en/index.html
+++ b/en/index.html
@@ -122,7 +122,7 @@
       <!--- #HERO-->
       <section class="section hero  has-after has-bg-image" id="home" aria-label="hero" data-section
         >
-        <div class="container">
+        <div class="container section">
           <div class="hero-content">
             <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
             
