--- a/sv/kontakt.html
+++ b/sv/kontakt.html
@@ -113,7 +113,7 @@
   <main>
     <article>
       <section class="section hero has-after has-bg-image" id="home" aria-label="hjälte" data-section>
-        <div class="container">
+        <div class="container section">
           <div class="hero-content">
             <h1 class=" h1 hero-title">Kontakta oss</h1>
             <p
@@ -181,7 +181,7 @@
     </article>
   </main>
 
-<footer class="footer">
+  <footer class="footer">
     <div class="section footer-top has-bg-image">
       <div class="container">
 
