--- a/sv/om-oss.html
+++ b/sv/om-oss.html
@@ -113,7 +113,7 @@
     <article>
       <section class="section hero has-after has-bg-image" id="home" aria-label="hero" data-section
         >
-        <div class="container">
+        <div class="container section">
           <div class="hero-content">
             <h1 class="h1 hero-title">Om Oss</h1>
             <h3 class="hero-subtitle">Din Partner inom Välmående och Avkoppling</h3>
