--- a/sv/valbefinnande.html
+++ b/sv/valbefinnande.html
@@ -113,7 +113,7 @@
     <article>
 <section class="section hero has-after has-bg-image" id="home" aria-label="hjälte" data-section
         >
-        <div class="container">
+        <div class="container section">
           <div class="hero-content">
             <h1 id="#top" class="h1 hero-title">Hälsa och Välbefinnande</h1>
             
