--- a/sv/kontakt.html
+++ b/sv/kontakt.html
@@ -80,10 +80,10 @@
             <a href="om-oss.html" class="navbar-link" data-nav-link>Om oss</a>
           </li>
           <li>
-            <a href="fitness.html" class="logo navbar-link" data-nav-link>
+            <a href="fitness.html" class="logo navbar-link text-center" data-nav-link>
             <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
-
-            <span class="span">F.I.T</span>
+            <span class="span">
+            F.I.T</span>
             </a>
           </li>
           <li>
