--- a/en/index.html
+++ b/en/index.html
@@ -178,7 +178,7 @@
         
       </section>
 
-       <section class="hero" id="about" aria-label="about">
+      <!-- <section class="hero" id="about" aria-label="about">
         <div class="container about">
           <div class="hero-content text-center">
             <h2 class="title contact-title">🌸 Promotion 🌸</h2>
@@ -196,7 +196,7 @@
               <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
           </div> 
            <br>    
-      </section>   
+      </section>    -->
      
       <!--- #VIDEO-->
       <section class="section video" aria-label="video">
