--- a/sv/index.html
+++ b/sv/index.html
@@ -146,14 +146,14 @@
           </div>
         </div>
         <br><br>
-        <div class="hero-subtitle">
+        <!-- <div class="hero-subtitle">
           <p class="text-center">
               Din flykt från stress börjar här
               <strong class="strong">
                 📍 Wallingatan 37 (Inne i 85 Kliniken) - Bara 5 minuters promenad från Arlanda Express & Centralstationen
               </strong>
           </p>
-        </div>
+        </div> -->
         <br><br>
         <div class="container">         
             <img src="../assets/images/waitingroom.JPG" alt="85 Kliniken väntrum" width="380" height="380" loading="lazy" class="round margin">
@@ -164,7 +164,7 @@
         </div>
       </section>
 
-       <section class="hero" id="about" aria-label="om">
+      <!-- <section class="hero" id="about" aria-label="om">
         <div class="container about">
           <div class="hero-content text-center">
             <h2 class="title contact-title">🌸 Kampanj 🌸</h2>
@@ -182,7 +182,7 @@
               <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Boka nu</a>
           </div> 
            <br>    
-      </section>   
+      </section>    -->
      
       <section class="section video" aria-label="video">
         <div class="container">
